--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,10 +2,30 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css">
         {% block stylesheets %}
+            <style>
+                label
+                {
+                    width: 100%;
+                }
+                input
+                {
+                    width: 100%;
+                    padding: 10px;
+                    margin-bottom: 15px;
+                    border: 1px solid #ced4da;
+                    border-radius: 5px;
+                    background-color: #f8f9fa;
+                }
+                input:focus
+                {
+                    border-color: #007bff;
+                    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+                }
+            </style>
         {% endblock %}
 
         {% block javascripts %}
