--- a/templates/ProductTemplates/productDetails.html.twig
+++ b/templates/ProductTemplates/productDetails.html.twig
@@ -41,6 +41,9 @@
                                 >
                                     Actualizar
                                 </a>
+                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addProduct">
+                                    Agregar al carrito
+                                </button>
                                 <a
                                         class="btn btn-danger"
                                         href="/product/delete/{{ product.id }}"
@@ -53,6 +56,46 @@
                 </div>
             </div>
         {% endif %}
+    </div>
+
+    <div class="modal fade" id="addProduct" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Enviar Producto</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form action="procesar.php" method="post">
+                        <div class="mb-3">
+                            <input
+                                    type="text"
+                                    class="form-control d-none"
+                                    id="id"
+                                    name="document"
+                                    value="{{ document }}"
+                                    disabled
+                            >
+                        </div>
+                        <div class="mb-3">
+                            <input
+                                    type="text"
+                                    class="form-control d-none"
+                                    id="id"
+                                    name="producto"
+                                    value="{{ product.id }}"
+                                    disabled
+                            >
+                        </div>
+                        <div class="mb-3">
+                            <label for="cantidad" class="form-label">Cantidad</label>
+                            <input type="number" class="form-control" id="amount" name="cantidad" required>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Enviar</button>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
 
 {% endblock %}
