Arreglos en las rutas de invoices

--- a/templates/InvoiceTemplates/invoiceList.html.twig
+++ b/templates/InvoiceTemplates/invoiceList.html.twig
@@ -12,7 +12,7 @@
         {% else %}
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
                 {% for invoice in invoices %}
-                    <a href="/invoice/details/{{ invoice.id }}" class="text-decoration-none">
+                    <a href="/invoices/details/{{ invoice.id }}" class="text-decoration-none">
                         <div class="col text-dark">
                             <div class="card shadow-lg rounded">
                                 <div class="card-header bg-secondary text-white">
