Creación del formulario para la creación de pedidos

--- a/templates/InvoiceTemplates/invoiceList.html.twig
+++ b/templates/InvoiceTemplates/invoiceList.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Lista de productos{% endblock %}
+{% block title %}Lista de pedidos{% endblock %}
 
 {% block body %}
 
