--- a/templates/ProductTemplates/productForms.html.twig
+++ b/templates/ProductTemplates/productForms.html.twig
@@ -4,6 +4,8 @@
 
 {% block body %}
 
+    {% include '/layouts/navbar.html.twig' %}
+
     <div class="d-flex w-100 align-items-center align-middle justify-content-center">
         <div class="w-25">
 
