--- a/templates/UserTemplate/login.html.twig
+++ b/templates/UserTemplate/login.html.twig
@@ -11,7 +11,7 @@
                 </div>
             {% endfor %}
 
-            <h1>Contact Form</h1>
+            <h1>Inicio de sesión</h1>
             {{ form_start(form, {"action" : "", "method" : "POST"}) }}
             {{ form_widget(form) }}
             <button type="submit">Iniciar sesión</button>
