--- a/templates/layouts/navbar.html.twig
+++ b/templates/layouts/navbar.html.twig
@@ -20,6 +20,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="/invoices/shopping-cart/list">Carrito</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/logout">Cerrar sesion</a>
+            </li>
         </ul>
     </div>
 </nav>
