--- a/templates/InvoiceTemplates/invoiceList.html.twig
+++ b/templates/InvoiceTemplates/invoiceList.html.twig
@@ -14,6 +14,7 @@
             </div>
         {% else %}
 
+            <h2 class="text-center">Mis facturas</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
 
                 {% for invoice in invoices %}
