Uso de referencias direccionales en los documentos

--- a/templates/InvoiceTemplates/invoiceDetails.html.twig
+++ b/templates/InvoiceTemplates/invoiceDetails.html.twig
@@ -27,7 +27,7 @@
                         <div class="row col-9">
                             <div class="card-body">
                                 <h5 class="card-title">
-                                    usuario: {{ invoice.userDocument }}
+                                    usuario: {{ invoice.user.name }}
                                 </h5>
                                 <p class="card-text">
                                     ID: {{ invoice.id }}
