--- a/templates/ProductTemplates/productDetails.html.twig
+++ b/templates/ProductTemplates/productDetails.html.twig
@@ -89,9 +89,9 @@
                             <input
                                     type="text"
                                     class="form-control d-none"
-                                    id="id"
-                                    name="id"
-                                    value="{{ product.id }}"
+                                    id="code"
+                                    name="code"
+                                    value="{{ product.code }}"
                             >
                         </div>
                         <div class="mb-3">
