--- a/templates/InvoiceTemplates/invoiceList.html.twig
+++ b/templates/InvoiceTemplates/invoiceList.html.twig
@@ -8,26 +8,27 @@
 
     <div class="container mt-5">
 
+        <h2 class="text-center mb-4">Mis facturas</h2>
+        <div class="d-flex justify-content-center w-100">
+            <div class="col-md-6">
+                <h4 class="text-center">Seleccionar Opción</h4>
+                <div class="d-flex justify-content-center mb-4">
+                    <div class="btn-group" role="group">
+                        <a href="/invoices/list/invoice" class="btn btn-primary">Facturas</a>
+                        <a href="/invoices/list/pay" class="btn btn-success">Pago</a>
+                        <a href="/invoices/list/cancel" class="btn btn-danger">Cancelado</a>
+                        <a href="/invoices/list/" class="btn btn-secondary">Todo</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         {% if invoices is empty %}
             <div class="alert alert-info" role="alert">
                 No hay pedidos disponibles en este momento.
             </div>
         {% else %}
 
-            <h2 class="text-center mb-4">Mis facturas</h2>
-            <div class="d-flex justify-content-center w-100">
-                <div class="col-md-6">
-                    <h4 class="text-center">Seleccionar Opción</h4>
-                    <div class="d-flex justify-content-center mb-4">
-                        <div class="btn-group" role="group">
-                            <a href="/invoices/list/invoice" class="btn btn-primary">Facturas</a>
-                            <a href="/invoices/list/pay" class="btn btn-success">Pago</a>
-                            <a href="/invoices/list/cancel" class="btn btn-danger">Cancelado</a>
-                            <a href="/invoices/list/" class="btn btn-secondary">Todo</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
 
                 {% for invoice in invoices %}
@@ -38,19 +39,19 @@
 
                                 {% if invoice.status == "shopping-cart" %}
                                     <div class="card-header bg-secondary text-white">
-                                        {{ invoice.userDocument }}
+                                        {{ invoice.user.name }}
                                     </div>
                                 {% elseif invoice.status == "invoice" %}
                                     <div class="card-header bg-primary text-white">
-                                        {{ invoice.userDocument }}
+                                        {{ invoice.user.name }}
                                     </div>
                                 {% elseif invoice.status == "pay" %}
                                     <div class="card-header bg-success text-white">
-                                        {{ invoice.userDocument }}
+                                        {{ invoice.user.name }}
                                     </div>
                                 {% else %}
                                     <div class="card-header bg-danger text-white">
-                                        {{ invoice.userDocument }}
+                                        {{ invoice.user.name }}
                                     </div>
                                 {% endif %}
 
