Refactorización de formularios y documentos

--- a/templates/InvoiceTemplates/invoiceDetails.html.twig
+++ b/templates/InvoiceTemplates/invoiceDetails.html.twig
@@ -56,7 +56,7 @@
                                         {% for product in invoice.products %}
                                             <tr>
                                                 <th scope="row">
-                                                    <a href="/product/details/{{ product.id }}" class="text-decoration-none">
+                                                    <a href="/product/details/{{ product.code }}" class="text-decoration-none">
                                                         {{ product.id }}
                                                     </a>
                                                 </th>
