Eliminación de productos del carrito de compras

--- a/templates/InvoiceTemplates/invoiceDetails.html.twig
+++ b/templates/InvoiceTemplates/invoiceDetails.html.twig
@@ -97,7 +97,7 @@
                                 {% elseif invoice.status == "shopping-cart" and invoice.products|length != 0 %}
                                     <form action="/invoices/create/invoice/" method="POST">
                                         <input
-                                                value="{{ invoice.userDocument }}"
+                                                value="{{ invoice.user.document }}"
                                                 name="userDocument"
                                                 class="d-none"
                                         >
