--- a/templates/ProductTemplates/productDetails.html.twig
+++ b/templates/ProductTemplates/productDetails.html.twig
@@ -50,7 +50,7 @@
                                 </p>
                                 <a
                                         class="btn btn-primary"
-                                        href="/product/update/{{ product.id }}"
+                                        href="/product/update/{{ product.code }}"
                                 >
                                     Actualizar
                                 </a>
@@ -64,7 +64,7 @@
                                 </button>
                                 <a
                                         class="btn btn-danger"
-                                        href="/product/delete/{{ product.id }}"
+                                        href="/product/delete/{{ product.code }}"
                                 >
                                     Eliminar
                                 </a>
