Refactorización de los controladores y la generación de tokens

--- a/templates/ProductTemplates/productList.html.twig
+++ b/templates/ProductTemplates/productList.html.twig
@@ -19,7 +19,7 @@
                     <a href="/product/details/{{ product.code }}" class="text-decoration-none">
                         <div class="col text-dark">
                             <div class="card shadow-lg rounded">
-                                <div class="card-header bg-secondary text-white">
+                                <div class="card-header bg-info text-white">
                                     {{ product.name }}
                                 </div>
                                 <div class="card-body">
