--- a/templates/InvoiceTemplates/invoiceResume.html.twig
+++ b/templates/InvoiceTemplates/invoiceResume.html.twig
@@ -15,7 +15,7 @@
             </div>
         {% endfor %}
 
-        {% if user is empty %}
+        {% if user is empty or products is empty %}
             <div class="alert alert-info" role="alert">
                 No hay facturas registradas.
             </div>
