--- a/templates/InvoiceTemplates/shoppingCartDetails.html.twig
+++ b/templates/InvoiceTemplates/shoppingCartDetails.html.twig
@@ -17,7 +17,7 @@
             <h2 class="pt-5" style="text-align: center">Detalles del pedido</h2>
             <div class="container mt-5">
                 <div class="row justify-content-center">
-                    <div class="col-6 card">
+                    <div class="col-md-12 col-lg-6 card">
                         <div class="row col-12">
                             <div class="card-body">
                                 <h5 class="card-title">
